Bug 347019. Don't throw exception when no accessible for node in nsIAccessibleRetrieval::getAccessibleFor() and friends. Patch by Alexander Surkov. r=david.bolter